<resources>
    <string name="app_name">Collabo</string>
    <string name="title_activity_home">Collabo</string>
    <string name="action_settings">Account Settings</string>
    <string name="profile_bio_change">Change bio</string>
    <string name="profile_photo_change">Change profile photo</string>
    <string name="profile_username_change">Change Display name</string>
    <string name="action_list_friends">Buddies</string>
    <string name="action_profile">Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="default_bio">Hi there, I have joined Collabo</string>
    <string name="facebook_app_id">1956736494614098</string>
    <string name="send_buddie_request">Send Buddie Request</string>
    <string name="accept_buddie_request">Accept</string>
    <string name="fb_login_protocol_scheme">fb1956736494614098</string>
    <string name="decline_buddie_request">Decline</string>
    <string name="help_or_send_feedback">Help / Send Feedback</string>
    <string name="enter_feedback">Start typing your message here...</string>
    <string name="send_feedback_to_email">Send via Email</string>
    <string name="speech_prompt">Tap mic to speak</string>
    <string name="classes_page_information">Click on add class button to create
        a class folder to store images, notes and documents.</string>

    <string name="notes_page_information">Click on add note button to create
        a new note</string>

    <string name="images_page_information">Click on the camera or gallery button to add an image
    to this class/project folder.</string>

    <string name="group_folder_information">Click on the camera or gallery button to add an image
    to this group. You can also click on the image and discuss with your buddies in this group.</string>

    <string name="buddies_activity_information">Choose any buddy to begin a chat. If you do not have
    any buddy, find new buddies</string>

    <string name="groups_infomation">Click on the create group button, provide new group name and
    add buddies to your group. You will be able to share images in this group with your chosen buddies.</string>

    <string name="assignments_infomation">Click on the add button to set a new due date for an assignment.</string>

    <!-- Strings related to Toast Messages -->
    <string name="code_mode_activate">Code View activated</string>
    <string name="code_mode_deactivate">Code View deactivated</string>

    <!-- Strings related to Buttons -->
    <string name="upload_profile_photo">Upload profile photo</string>
    <string name="upload_from_camera">Capture</string>
    <string name="upload_from_gallery">Select from Gallery</string>

    <!-- Strings related to Database References -->
    <string name="profile_photos_db_ref">Profile_Pictures</string>
    <string name="users_db_ref">Users</string>
    <string name="inbox_db_ref">INBOX</string>


    <!-- Strings related to Shared Preferences -->
    <string name="sharedPreference_file">sharedPreference_file</string>
    <string name="user_name">user_name</string>
    <string name="user_email">user_email</string>
    <string name="user_id">user_id</string>

    <!-- Strings related to file types -->
    <string name="image_file">image</string>
    <string name="pdf_file">pdf</string>
    <string name="note_file">note</string>


    <!-- Strings related to Fragments and Activities -->
    <string name="profile_fragment">Profile_Fragment</string>
    <string name="images_fragment">Images_Fragment</string>
    <string name="notes_fragment">Notes_Fragment</string>
    <string name="docs_fragment">Docs_Fragment</string>
    <string name="inbox_fragment">Inbox_Fragment</string>

    <string name="select_from_gallery_activity">Select_From_Gallery_Activity</string>
    <string name="main_front_page_activity">Main_Front_Page_Activity</string>
    <string name="display_note_activity">DisplayNote_Activity</string>
    <string name="newNote_activity">NewNote_Activity</string>

    <!-- Example General settings -->
    <string name="pref_header_general">Account</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">UserName</string>
    <string name="pref_default_display_name">No name</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_main_front_page">MainFrontPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    //Calculator Keypad
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="equals">=</string>
    <string name="multiplication">" x "</string>
    <string name="subtraction">" - "</string>
    <string name="negative">-</string>
    <string name="division">" / "</string>
    <string name="addition">" + "</string>
    <string name="positive">+</string>
    <string name="dot">.</string>
    <string name="opening_bracket">(</string>
    <string name="closing_bracket">)</string>
    <string name="percentage">" % "</string>
    <string name="delete">CE</string>


    //Activity titles
    <string name="MainFrontPageActivity">MainFrontPage</string>


    //Fragment titles
    <string name="TaskFragment">Tasks</string>


    //File names
    <string name="Tasks_File">tasks.json</string>


    //Error Messages
    <string name="Tasks_file_creation">Error occured</string>


    //Tasks Fragment
    <string name="Add_new_task">What\'s the new task</string>
    <string name="Warning_to_delete_task">Are you sure?</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulation_msg">You have completed 100% of your tasks</string>

</resources>
