<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tapiwa.collabo.Main">



    <item
        android:id="@+id/send_feedback"
        android:title="@string/help_or_send_feedback"
        android:orderInCategory="110"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="90"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/friends_list"
        android:title="@string/action_list_friends"
        android:orderInCategory="80"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/requests_lists"
        android:title="Requests"
        android:orderInCategory="70"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/search_new_friends"
        android:title="Search"
        android:orderInCategory="60"
        app:showAsAction="never"
        />


</menu>
