<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    android:backgroundTint="@android:color/white"
    tools:context="com.example.tapiwa.collabo.ProfileActivity">



    <include layout="@layout/app_bar_layout"
        android:id="@+id/profile_toolBar" />



    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="11dp"
        android:src="@drawable/new_default_image"
        android:id="@+id/profile_photo"
        android:layout_below="@+id/profile_toolBar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/DisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="Display Name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/profile_photo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        android:text="Hello there, I've joined Collabo"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/DisplayName"
        android:layout_centerHorizontal="true" />



    <Button
        android:id="@+id/send_friend_request"
        android:text="@string/send_buddie_request"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:visibility="visible"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/btnshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_above="@+id/request_sent_spinner"
        android:layout_centerHorizontal="true" />



    <Button
        android:id="@+id/accept_friend_request"
        android:text="@string/accept_buddie_request"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:background="@drawable/btnshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignBaseline="@+id/decline_friend_request"
        android:layout_alignBottom="@+id/decline_friend_request"
        android:layout_toEndOf="@+id/request_sent_spinner" />

    <Button
        android:id="@+id/decline_friend_request"
        android:text="@string/decline_buddie_request"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:visibility="visible"
        android:layout_marginLeft="8dp"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:background="@drawable/btnshape"
        android:backgroundTint="@android:color/holo_red_light"
        android:layout_below="@+id/bio"
        android:layout_toStartOf="@+id/request_sent_spinner"
        android:layout_marginTop="28dp" />



    <com.wang.avi.AVLoadingIndicatorView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:id="@+id/request_sent_spinner"
        app:indicatorName="BallTrianglePathIndicator"
        app:indicatorColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"

        />


</RelativeLayout>
